[package]
name = "salt-atproto"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["core"]

[dependencies]
atrium-api.workspace = true
tokio.workspace = true
salt_atproto_core = { path = "./core" }

[workspace.dependencies]
atrium-api = { version = "0.25.4", features = ["agent", "tokio"] }
atrium-xrpc-client = "0.5.14"
ipld-core = "0.4.2"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
