[workspace]
resolver = "3"
members = ["core", "checker", "cli"]
default-members = ["cli"]
package.edition = "2024"

[workspace.dependencies]
atrium-api = { version = "0.25.4", features = ["agent", "tokio"] }
atrium-xrpc-client = "0.5.14"
ipld-core = "0.4.2"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
