[package]
name = "salt_atproto_checker"
version = "0.0.1"
edition.workspace = true

[dependencies]
salt_atproto_core = { path = "../core" }
atrium-api.workspace = true
atrium-xrpc-client.workspace = true
hickory-client = "0.25.2"
ipld-core.workspace = true
thiserror.workspace = true
tokio.workspace = true
