[package]
name = "salt_atproto_cli"
version = "0.1.0"
description = "SALT CLI interface"
edition.workspace = true
license.workspace = true

[dependencies]
salt_atproto_core = "0.1.0"
salt_atproto_checker = "0.1.0"
atrium-api.workspace = true
atrium-xrpc-client.workspace = true
hickory-client = "0.25.2"
ipld-core.workspace = true
thiserror.workspace = true
tokio.workspace = true
clap = { version = "4.5.41", features = ["derive"] }
