[package]
name = "salt_atproto_core"
version = "0.1.1"
description = "Core SALT libraries"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
atrium-api.workspace = true
atrium-xrpc-client.workspace = true
hickory-client = "0.25.2"
ipld-core.workspace = true
thiserror.workspace = true
tokio.workspace = true
